Try and fix strange map behaviour on mobile

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -732,6 +732,7 @@ a {
   border-radius: 50%;
   height: 200px;
   margin-top: 50px;
+  overflow: hidden;
   width: 200px;
 
   @media screen and (max-width: 800px) {
